Add transaction history.
