# src/main/java/com/cobank/web/AccountController.java
@@ -6,12 +6,18 @@ import com.cobank.api.TransactionApi;
 import com.cobank.api.dto.*;
 import com.cobank.service.CreateAccountUseCase;
 import com.cobank.service.FetchBalanceUseCase;
+import com.cobank.service.GetTransactionHistoryUseCase;
 import com.cobank.service.ProcessTransactionUseCase;
+import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
+@RequiredArgsConstructor
 public class AccountController implements
         AccountApi,
         BalanceApi,
@@ -20,14 +26,7 @@ public class AccountController implements
     private final CreateAccountUseCase createAccountUseCase;
     private final FetchBalanceUseCase fetchBalanceUseCase;
     private final ProcessTransactionUseCase processTransactionUseCase;
-
-    public AccountController(CreateAccountUseCase createAccountUseCase,
-                             FetchBalanceUseCase fetchBalanceUseCase,
-                             ProcessTransactionUseCase processTransactionUseCase) {
-        this.createAccountUseCase = createAccountUseCase;
-        this.fetchBalanceUseCase = fetchBalanceUseCase;
-        this.processTransactionUseCase = processTransactionUseCase;
-    }
+    private final GetTransactionHistoryUseCase getTransactionHistoryUseCase;
 
     @Override
     public ResponseEntity<CreateAccountResponse> createAccount(CreateAccountRequest request) {
@@ -49,5 +48,12 @@ public class AccountController implements
                 .map(ResponseEntity::ok)
                 .orElse(ResponseEntity.internalServerError()
                         .body(new TransactionResponse(request.iban(), -1, "Transaction failed")));
+    }
+
+    @Override
+    public ResponseEntity<Page<TransactionHistoryResponse>> getTransactionHistory(String iban, int page, int size) {
+        Pageable pageable = PageRequest.of(page, size);
+        Page<TransactionHistoryResponse> historyPage = getTransactionHistoryUseCase.getTransactionHistory(iban, pageable);
+        return ResponseEntity.ok(historyPage);
     }
 }
